<resources>
    <string name="app_name">MeanMachine</string>
    <string name="title_activity_core">CoreActivity</string>

    <string name="dashboard_title">Dashboard</string>
    <string name="bill_title">Cobrar</string>
    <string name="products_title">Productos</string>
    <string name="options_title">Opciones</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="title_qr">Código Bancomer Móvil</string>
    <string name="user_title_qr">Código Bancomer Móvil para Usuario</string>
    <string name="finish_bill">Terminar</string>
    <string name="indications_qr">Por favor presenta el código QR que se encuentra abajo para realizar el cobro al usuario con Bancomer Móvil</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Borrar</string>
    <string name="btn_backspace">Atrás</string>
    <string name="bill_text">Cobrar</string>
    <string name="amount_to_bill_label">Monto a Cobrar</string>

</resources>
